# HR

./: .env  .gitignore  config.py  database.py  main.py  pyproject.toml  render.yaml  requirements.txt
bot/: keyboards.py  states.py  translations.py  utils.py
bot/handlers/: admin.py  language.py  manager.py  start.py  survey.py  vacancies.py
data/: hr_bot.db
