[tool.poetry]
name = "hr-telegram-bot"
version = "1.0.0"
description = "HR Telegram Bot"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiogram = "^3.15.0"
python-dotenv = "^1.0.0"
aiosqlite = "^0.20.0"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"